Fixed duplicate messages
Added scrooling feature

Added styling updates

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* width */
+::-webkit-scrollbar {
+    width: 1.5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: white;
+}
