--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import "base.css";
+@import "yorha.ccs";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -11,3 +14,4 @@
 ::-webkit-scrollbar-thumb {
     background: white;
 }
+
